5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1592_1806.log
== SUBMITION (2019-03-27 14:49:08) 
-- CODE:
n = float(input())
from math import*
p(n) = 1 -(factorial(365)/factorial(365-n))*1/365**n
print(round(p(n)*100, 2))


-- EXECUTION TIME:
0.158477
-- ERROR:
  File "/home/codebench/codes/1592/1806/main.py", line 3
    p(n) = 1 -(factorial(365)/factorial(365-n))*1/365**n
    ^
SyntaxError: can't assign to function call

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:49:25) 
-- CODE:

from math import*
n = float(input())
p(n) = 1 -(factorial(365)/factorial(365-n))*1/365**n
print(round(p(n)*100, 2))


-- EXECUTION TIME:
0.295757
-- ERROR:
  File "/home/codebench/codes/1592/1806/main.py", line 4
    p(n) = 1 -(factorial(365)/factorial(365-n))*1/365**n
    ^
SyntaxError: can't assign to function call

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:50:09) 
-- CODE:

from math import*
n = float(input())
p(n) = 1 -(factorial(365)/factorial(365-n))*(1/365**n)
print(round(p(n)*100, 2))


-- EXECUTION TIME:
0.138707
-- ERROR:
  File "/home/codebench/codes/1592/1806/main.py", line 4
    p(n) = 1 -(factorial(365)/factorial(365-n))*(1/365**n)
    ^
SyntaxError: can't assign to function call

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:50:55) 
-- CODE:

from math import*
n = float(input())
p(n) = (1 -(factorial(365)/factorial(365-n)) * (1/365**n))
print(round(p(n)*100, 2))


-- EXECUTION TIME:
0.154046
-- ERROR:
  File "/home/codebench/codes/1592/1806/main.py", line 4
    p(n) = (1 -(factorial(365)/factorial(365-n)) * (1/365**n))
    ^
SyntaxError: can't assign to function call

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:51:13) 
-- CODE:

from math import*
n = float(input())
p(n) = (1 -(factorial(365))/factorial(365-n)) * (1/365**n))
print(round(p(n)*100, 2))


-- EXECUTION TIME:
0.139876
-- ERROR:
  File "/home/codebench/codes/1592/1806/main.py", line 4
    p(n) = (1 -(factorial(365))/factorial(365-n)) * (1/365**n))
                                                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:51:35) 
-- CODE:

from math import*
n = float(input())
p(n) = (1 -(factorial(365))/(factorial(365-n)) * (1/365**n))
print(round(p(n)*100, 2))


-- EXECUTION TIME:
0.189334
-- ERROR:
  File "/home/codebench/codes/1592/1806/main.py", line 4
    p(n) = (1 -(factorial(365))/(factorial(365-n)) * (1/365**n))
    ^
SyntaxError: can't assign to function call

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:52:35) 
-- CODE:

from math import*
n = int(input())
p(n) = (1 -(factorial(365)/factorial(365-n)) * (1/365**n))
print(round(p(n)*100, 2))


-- EXECUTION TIME:
0.137408
-- ERROR:
  File "/home/codebench/codes/1592/1806/main.py", line 4
    p(n) = (1 -(factorial(365)/factorial(365-n)) * (1/365**n))
    ^
SyntaxError: can't assign to function call

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:52:59) 
-- CODE:

from math import*
n = int(input())
p(n) = (1 -(factorial(365)/factorial(365-n)) * (1/365**n))
print(round(p(n)*100, 2))


-- EXECUTION TIME:
0.140344
-- ERROR:
  File "/home/codebench/codes/1592/1806/main.py", line 4
    p(n) = (1 -(factorial(365)/factorial(365-n)) * (1/365**n))
    ^
SyntaxError: can't assign to function call

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:53:29) 
-- CODE:

from math import*
n = int(input())
p = (1 -(factorial(365)/factorial(365-n)) * (1/365**n))
print(round(p*100, 2))


-- EXECUTION TIME:
0.179214
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
